# parsing_challenge

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  setup.cfg
sql_scripts/: init.sql
src/: __init__.py  http_manager.py  offer_parser.py  parser.py  parsing.py  utils.py
src/database/: __init__.py  config.py  database.py
