[project]
name = "parsing_challenge"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Sergei Morozov", email = "sergei.sm.morozov@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
